crates/nargo_cli/tests/compile_failure/custom_entry_not_found/src/main.nr
fn main(x: Field) {
    assert_eq(x, 1);
}
